objects/SObj1__c.object
<CustomObject>
    <fields>
        <fullName>FirstField__c</fullName>
        <label>FirstField</label>
        <length>29</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormulaField__c</fullName>
        <formula>FirstField__c +  SecondField__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FormulaField</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObj1Desc__c</fullName>
        <label>SObj1Desc</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondField__c</fullName>
        <label>SecondField</label>
        <length>58</length>
        <type>Text</type>
    </fields>
    <label>SObj1</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>